--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "scratch-compiler",
   "author": "synicalmx",
+  "version": "0.1.0",
   "module": "src/index.ts",
   "type": "module",
   "scripts": {
