--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "camelcase": "^8.0.0",
     "jszip": "^3.10.1",
     "ts-md5": "^1.3.1"
   }
